force-app/main/default/objects/Asset_Detail__x/Asset_Detail__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AssetDetail</externalName>
    <label>Asset Detail</label>
    <pluralLabel>Asset Details</pluralLabel>
</CustomObject>