force-app/main/default/objects/Asset_Detail__x/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Associated id of asset</description>
    <externalDeveloperName>AssetId</externalDeveloperName>
    <label>Asset</label>
    <length>18</length>
    <referenceTo>Asset__x</referenceTo>
    <relationshipLabel>Asset Details</relationshipLabel>
    <relationshipName>Asset_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>