force-app/main/default/objects/Asset_Detail__x/fields/ECV__c.field-meta.xml
<CustomField>
    <fullName>ECV__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Asset identifier from manufacturer</description>
    <externalDeveloperName>ECV</externalDeveloperName>
    <label>ECV ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>