force-app/main/default/objects/Asset_Detail__x/fields/ECV_Valuer__c.field-meta.xml
<CustomField>
    <fullName>ECV_Valuer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>ECV Valuer</description>
    <externalDeveloperName>ECVValuer</externalDeveloperName>
    <label>ECV Valuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>