force-app/main/default/objects/Asset_Detail__x/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Brand</description>
    <externalDeveloperName>Make</externalDeveloperName>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>