force-app/main/default/objects/Asset_Detail__x/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Model of vehicle</description>
    <externalDeveloperName>Model</externalDeveloperName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>