force-app/main/default/objects/Asset_Detail__x/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Asset identifier from manufacturer</description>
    <externalDeveloperName>SerialNo</externalDeveloperName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>